Project

General

Profile

Bug #21393

MDSMonitor: inconsistent role/who usage in command help

Added by Patrick Donnelly over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Administration/Usability
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

`ceph rmfailed` refers to its argument as "who" and `ceph repaired` refers to its argument as "rank". We should make these commands and others consistent.

I would suggest standardizing on "rank" or "role".


Related issues

Related to mgr - Bug #22527: mgr.x runtime_error in json_spirit on upgrade Resolved 12/21/2017
Copied to CephFS - Backport #22508: luminous: MDSMonitor: inconsistent role/who usage in command help Closed

History

#1 Updated by Patrick Donnelly over 5 years ago

  • Assignee set to Patrick Donnelly

#2 Updated by John Spray over 5 years ago

role is certainly the more general/accurate term, for places where we're talking about a filesystem+rank.

I want a time machine to go back ten years and call ranks "metadata shards" so that the concept is more obvious to people! rank is pretty natural if you're used to HPC job managers but pretty obscure otherwise.

#3 Updated by Jos Collin over 5 years ago

  • Status changed from New to In Progress
  • Assignee changed from Patrick Donnelly to Jos Collin

#4 Updated by Jos Collin over 5 years ago

  • Status changed from In Progress to Fix Under Review

#5 Updated by Jos Collin over 5 years ago

  • Status changed from Fix Under Review to In Progress

#6 Updated by Jos Collin over 5 years ago

  • Status changed from In Progress to Fix Under Review

#7 Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport

#8 Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #22508: luminous: MDSMonitor: inconsistent role/who usage in command help added

#9 Updated by Patrick Donnelly over 5 years ago

The fix for this causes upgrade tests to fail: http://tracker.ceph.com/issues/22527#note-9

We will probably need to do a partial revert as I don't see a good way to fix it.

#10 Updated by Patrick Donnelly over 5 years ago

  • Related to Bug #22527: mgr.x runtime_error in json_spirit on upgrade added

#11 Updated by Patrick Donnelly over 5 years ago

  • Status changed from Pending Backport to Resolved
  • Backport deleted (luminous)

Also available in: Atom PDF