mon,doc,test: standardize argument as role

`ceph rmfailed` refers to its argument as "who" and `ceph repaired` refers to its argument as "rank". We should make these commands and others consistent by standardizing the argument as "role".

Fixes: http://tracker.ceph.com/issues/21393

Signed-off-by: Jos Collin <jcollin@redhat.com>